--- a/ubuntu.yml
+++ b/ubuntu.yml
@@ -8,5 +8,5 @@
     include_tasks: centos.yml
     when: ansible_facts['distribution'] == 'CentOS'
   - name: Performing Tasks for Ubuntu
-    include_tasks: ubuntu.yml
+    include_tasks: ubuntu1.yml
     when: ansible_facts['distribution'] == 'Ubuntu'
